fixed breakpoints and spacing for hours section

--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -5,55 +5,48 @@
     .embed-container {
         min-height: 300px;
     }
-    .section-img{
-        margin-top:-50px;
+    .section-img {
+        margin-top: -50px;
     }
-    .prices-section{
-        margin-top:-120px;
+    .prices-section {
+        margin-top: -120px;
     }
 }
 
 @media screen and (min-width: 768px) {
-
-     .prices-section{
-        margin-top:-180px;
+    .prices-section {
+        margin-top: -180px;
     }
-
 }
 
 @media screen and (min-width: 992px) {
-   
     .container {
-    max-width: 80%;
-    
+        max-width: 80%;
+    }
+    .read-btn {
+    margin-bottom:0;
 }
 
-       .prices-container,.rental-prices {
+    li{
+        box-shadow: 0 10px 6px -6px rgba(0, 0, 0, 0.5);
+    }
+    .prices-container, .rental-prices, .hours-prices {
         margin-right: .45%;
         width: 33%;
         &:last-of-type {
             margin-right: 0%;
         }
-
     }
-
-
-      .prices-section{
-        margin-top:-200px;
-    
-
-    .prices-container {
-    margin-bottom:0;
-}
-
- 
-
-    
-.member-btn{
-   margin:30px auto;
-}
-
-}
+    .prices-section {
+        margin-top: -200px;
+        .prices-container {
+            margin-bottom: 0;
+        }
+        .member-btn {
+            margin: 30px auto;
+            width:50%;
+        }
+    }
     h2 {
         font-size: 80px;
     }
@@ -66,34 +59,69 @@
     .righty {
         padding-left: 40px;
     }
-    
     .embed-container {
         min-height: 400px;
     }
-    .btn{
-        width:50%;
+    .btn {
+        width: 50%;
     }
-    .calender-btn{
-        width:70%;
+    .calender-btn {
+        width: 70%;
     }
     .programs-section {
-        h3{
-            margin-top:0;
+        h3 {
+            margin-top: 0;
         }
+    }
+    .location-section {
+        h3 {
+            margin-top: 50px;
+        }
+    }
+    .rental-bar, .hours-bar {
+        display: none;
+    }
+
+    .rental-bar-large {
+        height: 30px;
+        background: #1e2e41;
+        .none {
+            display: block;
+            margin-bottom: 0;
+        }
+    }
+
+.hours-section{
+      .hours-bar-large, {
+          height: 30px;
+        background: #1e2e41;
+        .none {
+            display: block;
+           
+        }
+    }
 }
+  
+
+.events-section{
+    li{
+        box-shadow:none;
+    }
+}
+
+
+
 }
 
 @media screen and (min-width: 1200px) {
-    .prices-container,.rental-prices {
+    .prices-container, .rental-prices {
         margin-right: .45%;
         width: 33%;
         &:last-of-type {
             margin-right: 0%;
         }
-
     }
-       .prices-section,.location-section{
-        margin-top:-380px;
+    .prices-section, .location-section {
+        margin-top: -380px;
     }
-    
 }
